[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"
authors = ["TerraBoii", "EvgenHi"]
readme = "README.md"
repository = "https://github.com/TerraBoii/tic_tac_toe"
license-file = "LICENSE"
description = "My variant of popular game named tic-tac-toe."
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
